[feat]: Partners model conrtroller and routes add.
